--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:500');
+@import url('https://fonts.googleapis.com/css?family=Roboto:500|Open+Sans');
 @font-face {
 	font-family: Nunito;
 	src: url(../elements/fonts/Nunito-Regular.ttf);
@@ -48,11 +48,6 @@ button[disabled], input[disabled], select[disabled], textarea[disabled] {
 #poststuff h2{
 	font-size: 19px;
 	padding: 0 0 15px 0;
-}
-#poststuff {
-
-	border: 1px solid #d0d6dc;
-	background-color:#fff ;
 }
 
 .saveSpinnerWrapper{
@@ -242,14 +237,7 @@ img.themeSpinner{
 
 
 }
-.hugeit_tabs_block .hugeit_contact_top_tabs li.add-new:before {
-	content: "Add New Form";
-	position: absolute;
-	top: 26px;
-	left: -125px;
-	font-size: 17px;
-	font-family: "Roboto";
-}
+
 .hugeit_tabs_block .hugeit_contact_top_tabs li:last-child:active {
 	background: rgba(113, 152, 255, 0.95);
 
@@ -1345,9 +1333,7 @@ a {
 	float: left;
 	width: 99%;
 }
-#post-body-content {
-	background-color:#f3f4f8;
-}
+
 #hugeit_theme_options_page #post-body-content{
 	margin-bottom: 0;
 }
