--- a/style/form-front.css
+++ b/style/form-front.css
@@ -514,3 +514,6 @@ button[disabled], input[disabled], select[disabled], textarea[disabled] {
     cursor: pointer !important;
     opacity: .5 !important;
 }
+input[disabled] +i +i {
+    opacity: 0.5;
+}
