--- a/style/form-front.css
+++ b/style/form-front.css
@@ -150,7 +150,7 @@ body .hugeit-contact-wrapper input, body .hugeit-contact-wrapper textarea {paddi
     position: relative;
     display: table !important;
     padding: 0 !important;
-    margin: 0 !important;
+    margin: 0 0 0 -5px !important;
 }
 
 .hugeit-contact-wrapper .hugeit-contact-column-block > div > label ul li {
