--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -3383,3 +3383,10 @@ Custom Settings
 	-moz-box-shadow: none;
 	box-shadow: none;
 }
+#fields-list-block .hg-mask-on input[type="text"] {
+	margin-top:5px;
+}
+.readonlyHgMask {
+	opacity: 0.5;
+	pointer-events: none;
+}
