Css for mask on input

--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -3385,7 +3385,9 @@ Custom Settings
 }
 #fields-list-block .hg-mask-on input[type="text"] {
 	margin-top:5px;
+	width:95%;
 }
+
 .readonlyHgMask {
 	opacity: 0.5;
 	pointer-events: none;
