--- a/style/form-front.css
+++ b/style/form-front.css
@@ -92,13 +92,13 @@ body .hugeit-contact-wrapper input, body .hugeit-contact-wrapper textarea {paddi
     overflow: hidden;
     outline: none;
 }
-.hugeit-contact-wrapper .hugeit-contact-column-block > div {
+.hugeit-contact-wrapper .hugeit-contact-column-block div.hugeit-field-block {
     width: 100%;
     padding: 5px 0px 5px 0px;
     clear: both;
 }
 /***fvpps***/
-.hugeit-contact-wrapper .hugeit-contact-column-block > div > label {
+.hugeit-contact-wrapper .hugeit-contact-column-block  div.hugeit-field-block > label {
     display: block;
     width: 38%;
     float: left;
@@ -507,7 +507,9 @@ body .hugeit-contact-wrapper input, body .hugeit-contact-wrapper textarea {paddi
     cursor: pointer;
     list-style: none;
 }
-
+.hugeit-form-mobile{
+    margin-bottom: 30px;
+}
 /* Pagination */
 
 button[disabled], input[disabled], select[disabled], textarea[disabled] {
